[project]
name = "modupdaterx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.12.0",
    "asttokens>=3.0.1",
    "attrs>=25.3.0",
    "backcall>=0.2.0",
    "beautifulsoup4>=4.14.2",
    "bleach>=6.2.0",
    "certifi>=2025.6.15",
    "charset-normalizer>=3.4.2",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "docopt>=0.6.2",
    "executing>=2.2.1",
    "fastjsonschema>=2.21.2",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "iniconfig>=2.1.0",
    "ipython>=8.12.3",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "jupyterlab-pygments>=0.3.0",
    "markupsafe>=3.0.3",
    "matplotlib-inline>=0.1.7",
    "mistune>=3.1.4",
    "modrinth-api-wrapper>=1.0.0",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "packaging>=25.0",
    "pandocfilters>=1.5.1",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "platformdirs>=4.4.0",
    "pluggy>=1.6.0",
    "prompt-toolkit>=3.0.52",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pygments>=2.19.2",
    "python-dateutil>=2.9.0.post0",
    "pyzmq>=27.1.0",
    "referencing>=0.36.2",
    "requests>=2.32.4",
    "rpds-py>=0.27.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8",
    "stack-data>=0.6.3",
    "tinycss2>=1.4.0",
    "tomlkit>=0.13.3",
    "tornado>=6.5.3",
    "traitlets>=5.14.3",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
    "urllib3>=2.6.0",
    "wcwidth>=0.2.14",
    "webencodings>=0.5.1",
    "yarg>=0.1.9",
]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
